--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "@vue/cli-plugin-babel": "^3.1.0",
     "@vue/cli-plugin-pwa": "^3.1.0",
     "@vue/cli-service": "^3.1.0",
-    "vue-template-compiler": "^2.5.17"
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.1",
+    "vue-cli-plugin-vuetify": "^0.4.5",
+    "vue-template-compiler": "^2.5.17",
+    "vuetify-loader": "^1.0.5"
   }
 }
